--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 
-#spring.data.mongodb.uri=mongodb+srv://trivedisahil91:trivedisahil91@cluster0.wwr2wa1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#spring.data.mongodb.uri=mongodb+srv://<username>:<Password>@cluster0.wwr2wa1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 #spring.data.mongodb.database=journaldb
 #spring.data.mongodb.auto-index-creation=true
 # spring.data.mongodb.password=password
