--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,12 +1,7 @@
-
-#spring.data.mongodb.uri=mongodb+srv://trivedisahil91:trivedisahil91@cluster0.wwr2wa1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-#spring.data.mongodb.database=journaldb
-#spring.data.mongodb.auto-index-creation=true
-#
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://trivedisahil91:trivedisahil91@cluster0.wwr2wa1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      uri: mongodb+srv://<username>:<password>@cluster0.wwr2wa1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       database: journaldb
       auto-index-creation: true
 
