--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,11 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://<username>:<Password>@cluster0.wwr2wa1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      uri: ${MONGO_URL}
       database: journaldb
       auto-index-creation: true
 
 
 server:
-  port: 8081
+  port: ${PORT:8080}
+
