--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,11 +1,12 @@
 spring:
   data:
     mongodb:
-      uri: ${MONGO_URL}
+      uri: ${MONGO_PUBLIC_UR}
       database: journaldb
       auto-index-creation: true
 
 
 server:
   port: ${PORT:8080}
+
 
