--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,14 +1,8 @@
 spring:
   data:
     mongodb:
-      uri: ${MONGO_PUBLIC_URL}
-      database: journaldb
+      uri: ${MONGO_PUBLIC_URL}/journaldb
       auto-index-creation: true
 
-
 server:
-  port: 8081
-
-
-
-
+  port: ${PORT:8080}
