--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
                 <artifactId>spring-boot-starter-data-mongodb</artifactId>
             </dependency>
 
+         <dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-ui</artifactId>
+    <version>1.6.15</version>
+</dependency>
+
+             
 
         <!-- Core Web dependency -->
         <dependency>
@@ -101,4 +108,5 @@
     </build>
 
 </project>
+
 
